@startuml Domain Model
title Domain Model

hide empty members
skinparam linetype ortho

package Main {
    class Terminal {}
    class App {
        currentUser
    }

    class InstructorRecords as "Users::InstructorRecords"  {}
    class Client as "Users::Client" {}
    class Instructor as "Users::Instructor" {}

    class CityRecords {}
    class City {
        name
        province
    }
    class LocationRecords {}
    class Location {
        facility
        roomName
        type
    }

    class ScheduleRecords {}
    class Schedule {
        startDate
        endDate
    }
    class TimeSlot {
        day
        startTime
        endTime
    }

    class OfferingRecords {}
    class Offering {
        lesson
        maxCapacity
        /currentCapacity
        /isPrivate
    }

    class BookingRecords {}
    class Booking {}

    App "1" <-up- "1" Terminal
    App --> OfferingRecords
    App --> BookingRecords
    App -> InstructorRecords
    App -> CityRecords
    App -> LocationRecords
    App --> ScheduleRecords

    InstructorRecords -> CityRecords

    City -* CityRecords

    Location "*" -up-> "1" City: in

    LocationRecords --> CityRecords
    LocationRecords *-up- Location
    LocationRecords <-- OfferingRecords

    Schedule *- TimeSlot: has

    ScheduleRecords *-- Schedule
    ScheduleRecords <-- OfferingRecords

    Offering --* OfferingRecords
    Offering "1" --> "1" Schedule: at
    Offering "1" --> "1" Location: in

    OfferingRecords -> InstructorRecords

    Instructor "1" -- "*" City: availableIn
    Instructor "0..1" <-- "*" Offering: taughtBy

    Client "*" -- "*" Offering

    (Client, Offering) -- Booking
    Booking --* BookingRecords
}
@enduml